@@ -11,7 +11,9 @@ Summary of important user-visible changes for Bio-Tools-Phylo-PAML
     instead of during the test phase.  This avoids failure reports
     from CPAN Testers.
 
-  * Fixed reading of ML matrix when using yn00
+  * Fixed reading of results for at least codeml and yno00 in cases
+    where next_result was previously returning undef.  May be specific
+    to PAML version 4.8 and 4.9 (current PAML version).
 
 1.7.2     2017-09-11 19:11:43+01:00 Europe/London
   * First release after split from bioperl-live and bioperl-run.
